--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,10 @@
     "html5-boilerplate": "^5.3.0",
     "angular-i18n" : "~1.4.0",
     "jquery" : "~3.0.0",
-    "bootstrap" : "~3.0.0"
+    "bootstrap" : "~3.0.0",
+    "datatables": ">=1.10.1",
+    "angular-datatables": ">=0.4.0"
+
 
   }
 }
