--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery" : "~3.0.0",
     "bootstrap" : "~3.0.0",
     "datatables": ">=1.10.1",
-    "angular-datatables": ">=0.4.0"
+    "angular-datatables": ">=0.4.0",
+    "mdi": ">=1.6.0"
 
 
   }
