--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
     "bootstrap" : "~3.0.0",
     "datatables": ">=1.10.1",
     "angular-datatables": ">=0.4.0",
-    "mdi": ">=1.6.0"
-
+    "mdi": ">=1.6.0",
+    "angularjs-datepicker" : ">=2.1.4"
 
   }
 }
